update general discussion
Signed-off-by: Atsuko Tominaga <Tominaga_Atsuko@phd.ceu.edu>

--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -393,15 +393,13 @@ The results from Experiment 2 demonstrated that we successfully replicated our e
 \hypertarget{general-discussion}{%
 \section{4. General Discussion}\label{general-discussion}}
 
-The aim of the study was to investigate how expert pianists could modulate their performance in order to teach expressive artistic techniques. Overall, the findings of the two experiments showed that pianists performed one and the same piece differently depending on whether they played with the intention to teach expressive techniques or with the intention to perform the piece for an audience. When playing with the intention to teach, pianists selectively highlighted relevant aspects of artistic expressions. In particular, they exaggerated staccato when playing with the intention to teach expressions concerning articulation, and they exaggerated changes between forte and piano (in both directions) when playing with the intention to teach expressions concerning dynamics.
+The aim of the study was to investigate how expert pianists modulate their performance in order to teach expressive techniques. Overall, the findings of the two experiments showed that pianists performed one and the same piece differently depending on whether they played with the intention to teach expressive techniques or with the intention to perform the piece for an audience. When playing with the intention to teach, pianists selectively highlighted relevant aspects of artistic expressions. Across two different pieces, they exaggerated staccato when playing with the intention to teach expressions concerning articulation. The lack of a difference for legato when teaching articulation might stem from a ceiling effect. When playing with the intention to teach expressions concerning dynamics, participants exaggerated changes between forte and piano (in both directions). This constitutes an effective way to highlight the technique as loudness is determined relatively. Taken together, our findings demonstrate that expert pianists systematically modulated their sound depending on the specific technique they were trying to convey.
 
-Although participants tended to play slower in the teaching condition than in the performing condition in general, we found a significant difference only for articulation, not for dynamics. As we mentioned in Experiment 1, it could be that the metronome beats given prior to each performance discouraged participants from deviating from the prescribed tempo. Another possibility is that expression is actually best taught when leaving the tempo unchanged when it is irrelevant. This would imply that general didactic modulations like slowing down, reported in research on parent-infant interaction, might be less useful in the context of teaching expressive artistic techniques where timing itself can be used to add an expression to a performance.
-
-Participants exaggerated articulation for teaching purposes by highlighting staccato. The lack of a difference for legato might stem from a ceiling effect. When participants played the piece with dynamics, there was no difference between the two conditions with regard to KOT/KOR, which indicates that participants did not modulate irrelevant properties of the sound. Also, participants made a larger contrast between forte and piano for teaching purposes to highlight the transition of dynamics. We expected there would be an overall exaggeration in KV while teaching dynamics and indeed found that participants produced louder forte and softer piano, but only in Experiment 2. The finding of making a larger contrast in dynamics at transition points suggests an effective way to highlight the technique as the loudness is determined relatively. Taken together, these findings demonstrate that expert pianists systematically modulated their sound depending on the specific technique they were trying to convey.
+Although participants tended to play slower in the teaching condition than in the performing condition in general, we found a significant difference only for articulation, not for dynamics. As we mentioned in the discussion of Experiment 1, it could be that the metronome beats given prior to each performance discouraged participants from deviating from the prescribed tempo. Another possibility is that expression is actually best taught when leaving the tempo unchanged when it is irrelevant. This would imply that general didactic modulations like slowing down might be less useful in the context of teaching expressive artistic techniques where timing itself can be used to add an expression to a performance.
 
 Musicians and music teachers tend to consider expressive skills as a performer's most important skills (Lindström, Juslin, Bresin, \& Williamon, 2003). In the present study, experts focused on the teaching of expressions that were notated. However, expression also has other facets (Juslin, 2003) that are not only piece-related but performer- or context-related. An interesting topic for future research is how experts teach not only expressive techniques as such but convey possibilities of interpretation.
 
-One limitation of the study is that although we instructed participants to imagine a situation in which they were teaching musical expression to students, there was no feedback from actual students. Given that teachers modulate their demonstration throughout online interactions with learners (Okazaki, Muraoka, \& Osu, 2019), future studies are needed to investigate how experts dynamically adapt their performance to their student's skill level and demonstrated abilities.
+One limitation of the study is that although we instructed participants to imagine a situation in which they were teaching musical expression to students, there was no feedback from actual students. Given that teachers modulate their demonstration throughout online interactions with learners (Okazaki, Muraoka, \& Osu, 2019), future studies are needed to investigate how experts dynamically adapt their performance to their students' skill level and demonstrated abilities.
 
 The present findings extend earlier research on teaching-related action modulations. First, our study sheds light on the teaching of expressive techniques that are an integral part of skill acquisition in artistic domains. We showed that compared to an expressive performance baseline, experts made specific modulations in order to teach particular techniques. Second, the specificity of the observed modulations supports the idea that teaching comprises more than generic modulations like slowing down or overall exaggeration that may draw learners' attention. Rather, expert demonstrators seem to follow principles of relevance in communication (Sperber \& Wilson, 1995), highlighting only those aspects they are intending to demonstrate. How learners benefit from the perceptual and motor cues that come with specific exaggerations, and whether understanding the teacher's intentions explicitly adds to the learning success are important questions for future research.
 
@@ -413,7 +411,7 @@ We thank Dávid Csűrös for his help with data collection. This research was
 \hypertarget{declarations-of-interest}{%
 \section{Declarations of interest}\label{declarations-of-interest}}
 
-All authors have no conflict of interest.
+The authors have no conflict of interest.
 
 \newpage
 
